set(CMAKE_INCLUDE_CURRENT_DIR ON)

#echo of user defined options
SET(LIST_OF_APPS "\
CONVECTION_DIFFUSION_APPLICATION;\
STRUCTURAL_MECHANICS_APPLICATION;\
CONTACT_STRUCTURAL_MECHANICS_APPLICATION;\
SOLID_MECHANICS_APPLICATION;\
CONTACT_MECHANICS_APPLICATION;\
CONSTITUTIVE_MODELS_APPLICATION;\
UMAT_APPLICATION;\
POROMECHANICS_APPLICATION;\
DAM_APPLICATION;\
FLUID_DYNAMICS_APPLICATION;\
INCOMPRESSIBLE_FLUID_APPLICATION;\
MESH_MOVING_APPLICATION;\
FSI_APPLICATION;\
COMPRESSIBLE_POTENTIAL_FLOW_APPLICATION;\
SHALLOW_WATER_APPLICATION;\
EMPIRE_APPLICATION;\
PFEM_APPLICATION;\
PFEM_SOLID_MECHANICS_APPLICATION;\
PFEM_FLUID_DYNAMICS_APPLICATION;\
PFEM2_APPLICATION;\
DEM_APPLICATION;\
SWIMMING_DEM_APPLICATION;\
PARTICLE_MECHANICS_APPLICATION;\
EXTERNAL_SOLVERS_APPLICATION;\
TRILINOS_APPLICATION;\
METIS_APPLICATION;\
MESHING_APPLICATION;\
SHAPE_OPTIMIZATION_APPLICATION;\
MAPPING_APPLICATION;\
EIGEN_SOLVERS_APPLICATION;\
HDF5_APPLICATION;\
DELAUNAY_MESHING_APPLICATION;\
FREE_SURFACE_APPLICATION;\
FLUID_TRANSPORT_APPLICATION;\
IGA_APPLICATION;\
DEM_STRUCTURES_COUPLING_APPLICATION;\
MULTILEVEL_MONTE_CARLO_APPLICATION;\
FEM_TO_DEM_APPLICATION;\
RANS_APPLICATION;\
EXAQUTE_SANDBOX_APPLICATION;\
CO_SIMULATION_APPLICATION;\
CABLE_NET_APPLICATION;\
")

message( " ")
message( " ")

# include automatically application dependencies:
if(${ADD_DEPENDENT_APPLICATIONS} MATCHES ON)
if(${PFEM_SOLID_MECHANICS_APPLICATION} MATCHES ON)
 if(NOT DEFINED PFEM_APPLICATION)
  Set(PFEM_APPLICATION ON)
  Set(LIST_OF_ADDED_APPS ${LIST_OF_ADDED_APPS} "PFEM_APPLICATION")
 elseif(${PFEM_APPLICATION} MATCHES OFF)
  Set(PFEM_APPLICATION ON)
  Set(LIST_OF_ACTIVATED_APPS ${LIST_OF_ACTIVATED_APPS} "PFEM_APPLICATION")
 endif(NOT DEFINED PFEM_APPLICATION)
endif(${PFEM_SOLID_MECHANICS_APPLICATION} MATCHES ON)

if(${PFEM_APPLICATION} MATCHES ON)
 if(NOT DEFINED DELAUNAY_MESHING_APPLICATION)
  Set(DELAUNAY_MESHING_APPLICATION ON)
  Set(LIST_OF_ADDED_APPS ${LIST_OF_ADDED_APPS} "DELAUNAY_MESHING_APPLICATION")
 elseif(${DELAUNAY_MESHING_APPLICATION} MATCHES OFF)
  Set(DELAUNAY_MESHING_APPLICATION ON)
  Set(LIST_OF_ACTIVATED_APPS ${LIST_OF_ACTIVATED_APPS} "DELAUNAY_MESHING_APPLICATION")
 endif(NOT DEFINED DELAUNAY_MESHING_APPLICATION)
 if(NOT DEFINED SOLID_MECHANICS_APPLICATION)
  Set(SOLID_MECHANICS_APPLICATION ON)
  Set(LIST_OF_ADDED_APPS ${LIST_OF_ADDED_APPS} "SOLID_MECHANICS_APPLICATION")
 elseif(${SOLID_MECHANICS_APPLICATION} MATCHES OFF)
  Set(SOLID_MECHANICS_APPLICATION ON)
  Set(LIST_OF_ACTIVATED_APPS ${LIST_OF_ACTIVATED_APPS} "SOLID_MECHANICS_APPLICATION")
 endif(NOT DEFINED SOLID_MECHANICS_APPLICATION)
 if(NOT DEFINED CONTACT_MECHANICS_APPLICATION)
  Set(CONTACT_MECHANICS_APPLICATION ON)
  Set(LIST_OF_ADDED_APPS ${LIST_OF_ADDED_APPS} "CONTACT_MECHANICS_APPLICATION")
 elseif(${CONTACT_MECHANICS_APPLICATION} MATCHES OFF)
  Set(CONTACT_MECHANICS_APPLICATION ON)
  Set(LIST_OF_ACTIVATED_APPS ${LIST_OF_ACTIVATED_APPS} "CONTACT_MECHANICS_APPLICATION")
 endif(NOT DEFINED CONTACT_MECHANICS_APPLICATION)
endif(${PFEM_APPLICATION} MATCHES ON)

if(${CONTACT_MECHANICS_APPLICATION} MATCHES ON)
 if(NOT DEFINED DELAUNAY_MESHING_APPLICATION)
  Set(DELAUNAY_MESHING_APPLICATION ON)
  Set(LIST_OF_ADDED_APPS ${LIST_OF_ADDED_APPS} "DELAUNAY_MESHING_APPLICATION")
 elseif(${DELAUNAY_MESHING_APPLICATION} MATCHES OFF)
  Set(DELAUNAY_MESHING_APPLICATION ON)
  Set(LIST_OF_ACTIVATED_APPS ${LIST_OF_ACTIVATED_APPS} "DELAUNAY_MESHING_APPLICATION")
 endif(NOT DEFINED DELAUNAY_MESHING_APPLICATION)
endif(${CONTACT_MECHANICS_APPLICATION} MATCHES ON)

if(${SOLID_MECHANICS_APPLICATION} MATCHES ON)
 if(NOT DEFINED CONSTITUTIVE_MODELS_APPLICATION)
  Set(CONSTITUTIVE_MODELS_APPLICATION ON)
  Set(LIST_OF_ADDED_APPS ${LIST_OF_ADDED_APPS} "CONSTITUTIVE_MODELS_APPLICATION")
 elseif(${CONSTITUTIVE_MODELS_APPLICATION} MATCHES OFF)
  Set(CONSTITUTIVE_MODELS_APPLICATION ON)
  Set(LIST_OF_ACTIVATED_APPS ${LIST_OF_ACTIVATED_APPS} "CONSTITUTIVE_MODELS_APPLICATION")
 endif(NOT DEFINED CONSTITUTIVE_MODELS_APPLICATION)
endif(${SOLID_MECHANICS_APPLICATION} MATCHES ON)

if(${UMAT_APPLICATION} MATCHES ON)
 if(NOT DEFINED CONSTITUTIVE_MODELS_APPLICATION)
  Set(CONSTITUTIVE_MODELS_APPLICATION ON)
  Set(LIST_OF_ADDED_APPS ${LIST_OF_ADDED_APPS} "CONSTITUTIVE_MODELS_APPLICATION")
 elseif(${CONSTITUTIVE_MODELS_APPLICATION} MATCHES OFF)
  Set(CONSTITUTIVE_MODELS_APPLICATION ON)
  Set(LIST_OF_ACTIVATED_APPS ${LIST_OF_ACTIVATED_APPS} "CONSTITUTIVE_MODELS_APPLICATION")
 endif(NOT DEFINED CONSTITUTIVE_MODELS_APPLICATION)
endif(${UMAT_APPLICATION} MATCHES ON)

if(LIST_OF_ADDED_APPS)
message( "***** LIST OF KRATOS APPLICATIONS AUTOMATICALLY ADDED: ***************")
message( " ")
FOREACH(APP ${LIST_OF_ADDED_APPS})
message("                ${APP} - ${${APP}}")
ENDFOREACH()
message( " ")
message( "**********************************************************************")
message( " ")
endif(LIST_OF_ADDED_APPS)

if(LIST_OF_ACTIVATED_APPS)
message( "***** LIST OF KRATOS APPLICATIONS AUTOMATICALLY SET TO ON: ***********")
message( " ")
FOREACH(APP ${LIST_OF_ACTIVATED_APPS})
message("                ${APP} - ${${APP}}")
ENDFOREACH()
message( " ")
message( "**********************************************************************")
message( " ")
endif(LIST_OF_ACTIVATED_APPS)
endif(${ADD_DEPENDENT_APPLICATIONS} MATCHES ON)

message( "***** LIST OF KRATOS APPLICATIONS THAT ARE GOING TO BE COMPILED: *****")
message( " ")
FOREACH(APP ${LIST_OF_APPS})
IF(${${APP}} MATCHES ON)
message("                ${APP} - ${${APP}}")
ENDIF(${${APP}} MATCHES ON)
ENDFOREACH()
message( " ")
message( "**********************************************************************")
message( " ")

message( "****** LIST OF KRATOS APPLICATIONS THAT ARE SET TO OFF: **************")
message( " ")
FOREACH(APP ${LIST_OF_APPS})
IF(${${APP}} MATCHES OFF)
message("                ${APP} - ${${APP}}")
ENDIF(${${APP}} MATCHES OFF)
ENDFOREACH()
message( " ")
message( "**********************************************************************")
message( " ")
message( " ")

#include subdirectories for compilation

if(${EXTERNAL_SOLVERS_APPLICATION} MATCHES ON)
  add_subdirectory(ExternalSolversApplication)
endif(${EXTERNAL_SOLVERS_APPLICATION} MATCHES ON)

if(${DELAUNAY_MESHING_APPLICATION} MATCHES ON)
  add_subdirectory(DelaunayMeshingApplication)
endif(${DELAUNAY_MESHING_APPLICATION} MATCHES ON)

if(${CONSTITUTIVE_MODELS_APPLICATION} MATCHES ON)
  add_subdirectory(ConstitutiveModelsApplication)
endif(${CONSTITUTIVE_MODELS_APPLICATION} MATCHES ON)

if(${CONTACT_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(ContactMechanicsApplication)
endif(${CONTACT_MECHANICS_APPLICATION} MATCHES ON)

if(${SOLID_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(SolidMechanicsApplication)
endif(${SOLID_MECHANICS_APPLICATION} MATCHES ON)

if(${PFEM_APPLICATION} MATCHES ON)
  add_subdirectory(PfemApplication)
endif(${PFEM_APPLICATION} MATCHES ON)

if(${PFEM_SOLID_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(PfemSolidMechanicsApplication)
endif(${PFEM_SOLID_MECHANICS_APPLICATION} MATCHES ON)

if(${PFEM_FLUID_DYNAMICS_APPLICATION} MATCHES ON)
  add_subdirectory(PfemFluidDynamicsApplication)
endif(${PFEM_FLUID_DYNAMICS_APPLICATION} MATCHES ON)

if(${UMAT_APPLICATION} MATCHES ON)
  add_subdirectory(UmatApplication)
endif(${UMAT_APPLICATION} MATCHES ON)

if(${CONVECTION_DIFFUSION_APPLICATION} MATCHES ON)
  add_subdirectory(ConvectionDiffusionApplication)
endif(${CONVECTION_DIFFUSION_APPLICATION} MATCHES ON)

if(${MESHING_APPLICATION} MATCHES ON)
  add_subdirectory(MeshingApplication)
endif(${MESHING_APPLICATION} MATCHES ON)

if(${STRUCTURAL_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(StructuralMechanicsApplication)
endif(${STRUCTURAL_MECHANICS_APPLICATION} MATCHES ON)

if(${FLUID_DYNAMICS_APPLICATION} MATCHES ON)
  add_subdirectory(FluidDynamicsApplication)
endif(${FLUID_DYNAMICS_APPLICATION} MATCHES ON)

if(${MESH_MOVING_APPLICATION} MATCHES ON)
  add_subdirectory(MeshMovingApplication)
endif(${MESH_MOVING_APPLICATION} MATCHES ON)

if(${FSI_APPLICATION} MATCHES ON)
  add_subdirectory(FSIApplication)
endif(${FSI_APPLICATION} MATCHES ON)

if(${EMPIRE_APPLICATION} MATCHES ON)
  add_subdirectory(EmpireApplication)
endif(${EMPIRE_APPLICATION} MATCHES ON)

if(${DEM_APPLICATION} MATCHES ON)
  add_subdirectory(DEMApplication)
endif(${DEM_APPLICATION} MATCHES ON)

if(${SWIMMING_DEM_APPLICATION} MATCHES ON)
  add_subdirectory(SwimmingDEMApplication)
endif(${SWIMMING_DEM_APPLICATION} MATCHES ON)

if(${ULF_APPLICATION} MATCHES ON)
  add_subdirectory(ULFapplication)
endif(${ULF_APPLICATION} MATCHES ON)

if(${METIS_APPLICATION} MATCHES ON)
  add_subdirectory(MetisApplication)
endif(${METIS_APPLICATION} MATCHES ON)

if(${TRILINOS_APPLICATION} MATCHES ON)
  add_subdirectory(TrilinosApplication)
endif(${TRILINOS_APPLICATION} MATCHES ON)

if(${DEM_FEM_APPLICATION} MATCHES ON)
  add_subdirectory(DEM_FEM_Application)
endif(${DEM_FEM_APPLICATION} MATCHES ON)

if(${PFEM2_APPLICATION} MATCHES ON)
  add_subdirectory(pfem_2_application)
endif(${PFEM2_APPLICATION} MATCHES ON)

if(${POROMECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(PoromechanicsApplication)
endif(${POROMECHANICS_APPLICATION} MATCHES ON)

if(${PARTICLE_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(ParticleMechanicsApplication)
endif(${PARTICLE_MECHANICS_APPLICATION} MATCHES ON)

if(${DAM_APPLICATION} MATCHES ON)
  add_subdirectory(DamApplication)
endif(${DAM_APPLICATION} MATCHES ON)

if(${SHAPE_OPTIMIZATION_APPLICATION} MATCHES ON)
  add_subdirectory(ShapeOptimizationApplication)
endif(${SHAPE_OPTIMIZATION_APPLICATION} MATCHES ON)

if(${CONTACT_STRUCTURAL_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(ContactStructuralMechanicsApplication)
endif(${CONTACT_STRUCTURAL_MECHANICS_APPLICATION} MATCHES ON)

if(${MAPPING_APPLICATION} MATCHES ON)
  add_subdirectory(MappingApplication)
endif(${MAPPING_APPLICATION} MATCHES ON)

if(${INCOMPRESSIBLE_FLUID_APPLICATION} MATCHES ON)
  add_subdirectory(incompressible_fluid_application)
endif(${INCOMPRESSIBLE_FLUID_APPLICATION} MATCHES ON)

if(${COMPRESSIBLE_POTENTIAL_FLOW_APPLICATION} MATCHES ON)
  add_subdirectory(CompressiblePotentialFlowApplication)
endif(${COMPRESSIBLE_POTENTIAL_FLOW_APPLICATION} MATCHES ON)

if(${HDF5_APPLICATION} MATCHES ON)
  add_subdirectory(HDF5Application)
endif(${HDF5_APPLICATION} MATCHES ON)

if(${SHALLOW_WATER_APPLICATION} MATCHES ON)
  add_subdirectory(ShallowWaterApplication)
endif(${SHALLOW_WATER_APPLICATION} MATCHES ON)

if(${EIGEN_SOLVERS_APPLICATION} MATCHES ON)
  add_subdirectory(EigenSolversApplication)
endif(${EIGEN_SOLVERS_APPLICATION} MATCHES ON)

if(${FREE_SURFACE_APPLICATION} MATCHES ON)
  add_subdirectory(FreeSurfaceApplication)
endif(${FREE_SURFACE_APPLICATION} MATCHES ON)

if(${FLUID_TRANSPORT_APPLICATION} MATCHES ON)
  add_subdirectory(FluidTransportApplication)
endif(${FLUID_TRANSPORT_APPLICATION} MATCHES ON)

if(${CSHARP_WRAPPER_APPLICATION} MATCHES ON)
  add_subdirectory(CSharpWrapperApplication)
endif(${CSHARP_WRAPPER_APPLICATION} MATCHES ON)

if(${IGA_APPLICATION} MATCHES ON)
  add_subdirectory(IgaApplication)
endif(${IGA_APPLICATION} MATCHES ON)

if(${DEM_STRUCTURES_COUPLING_APPLICATION} MATCHES ON)
  add_subdirectory(DemStructuresCouplingApplication)
endif(${DEM_STRUCTURES_COUPLING_APPLICATION} MATCHES ON)

if(${MULTILEVEL_MONTE_CARLO_APPLICATION} MATCHES ON)
  add_subdirectory(MultilevelMonteCarloApplication)
endif(${MULTILEVEL_MONTE_CARLO_APPLICATION} MATCHES ON)

if(${FEM_TO_DEM_APPLICATION} MATCHES ON)
  add_subdirectory(FemToDemApplication)
endif(${FEM_TO_DEM_APPLICATION} MATCHES ON)

if(${RANS_APPLICATION} MATCHES ON)
  add_subdirectory(RANSApplication)
endif(${RANS_APPLICATION} MATCHES ON)
if(${EXAQUTE_SANDBOX_APPLICATION} MATCHES ON)
  add_subdirectory(ExaquteSandboxApplication)
endif(${EXAQUTE_SANDBOX_APPLICATION} MATCHES ON)

if(${CO_SIMULATION_APPLICATION} MATCHES ON)
  add_subdirectory(CoSimulationApplication)
endif(${CO_SIMULATION_APPLICATION} MATCHES ON)

if(${CABLE_NET_APPLICATION} MATCHES ON)
  add_subdirectory(CableNetApplication)
endif(${CABLE_NET_APPLICATION} MATCHES ON)

# get_property(inc_dirs DIRECTORY PROPERTY INCLUDE_DIRECTORIES)
# message("applications subdir inc_dirs = ${inc_dirs}")
